--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Elliptic functions'
 - !lcc 'QA'
+- GITenberg
 title: Sur quelques applications des fonctions elliptiques
 url: http://www.gutenberg.org/ebooks/25227
